a lot of bug fixes.(and code improvement). The next step is : 1) add same package/class judgement 2) consider fine-grained match!